--- a/flutter_app_carros/pubspec.yaml
+++ b/flutter_app_carros/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
   dio: ^5.9.0
+  lottie: 
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +25,4 @@ flutter:
 
   assets:
     - assets/data.json 
+    - assets/car.json
